test/parse/module/bad-memory-segment-address.txt
;;; ERROR: 1
(module
  (memory 100)
  (data foo))
(;; STDERR ;;;
out/test/parse/module/bad-memory-segment-address.txt:4:9: error: unexpected token "foo", expected an offset expr (e.g. (i32.const 123)).
  (data foo))
        ^^^
;;; STDERR ;;)
